--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 || ^8.0",
         "ext-phar": "*",
         "amphp/parallel-functions": "^0.1.3",
         "beberlei/assert": "^3.2",
